# ProiectPI_ORB

./: CMakeLists.txt  Documentatie_PI.docx  main.cpp  opencv_detector.cpp  opencv_detector.h  orb_detector.cpp  orb_detector.h  shape_detector.cpp  shape_detector.h  shape_type.h  sign_detector.cpp  sign_detector.h  test_orb.cpp
